# midiSequencerInputUnit

./: README.md
Firmware/: CMakeLists.txt  README.md  partitionTable.csv  sdkconfig  sdkconfig.old
Firmware/components/bleCentralClient/: CMakeLists.txt  bleCentPrivate.h  bleCentral.c
Firmware/components/fileSys/: fileSys.c
Firmware/components/guiMenu/: menu.c
Firmware/components/ipsDisplay/: ipsDisplay.c  ipsDisplayPrivate.h
Firmware/components/ledDrivers/: CMakeLists.txt  ledDriverPrivates.h  ledDrivers.c
Firmware/components/midiHelper/: midiHelper.c
Firmware/components/rotaryEncoders/: CMakeLists.txt  rotaryEncoders.c
Firmware/components/switchMatrix/: CMakeLists.txt  switchMatrix.c
Firmware/main/: main.c
Hardware/MidiSequencerInputUnit_6R_8C/: Controller_Switch_Matrix_Module.kicad_pro  Controller_Switch_Matrix_Module.net  ips_screen.kicad_sch  qspi_flash_sch.kicad_sch  schmittTriggers.kicad_sch  smps.kicad_sch  xtal_12MHZ.kicad_sch
midiSequencerInputUnit/Firmware/: Makefile  README.md  scratch.txt  sdkconfig  sdkconfigs  sdkconfigs.old
midiSequencerInputUnit/Firmware/components/system/: CMakeLists.txt  sequencerGrid.c  sequencerGrid.h  system.c  systemEvents.c
midiSequencerInputUnit/Firmware/components/system/gridManager/: gridManager.c  gridManager.h  sequencerGrid.c  sequencerGrid.h
midiSequencerInputUnit/Firmware/components/system/gridManager/genericDLL/: genericDLL.c  genericDLL.h
midiSequencerInputUnit/Firmware/components/system/include/: sequencerGrid.h  system.h  systemEvents.h
midiSequencerInputUnit/Hardware/: README.md
(+62 files in other folders)
